karpenter/add-karpenter-donot-disrupt/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-evict
  labels:
    karpenter.sh/do-not-evict: "true"
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-without-evict
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
